--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@langchain/groq": "^0.2.3",
+    "@langchain/langgraph": "^0.3.8",
+    "@langchain/mcp-adapters": "^0.5.3",
+    "@modelcontextprotocol/sdk": "^1.15.1",
     "@solana/web3.js": "^1.98.2",
+    "dotenv": "^17.2.0",
     "node-fetch": "^3.3.2"
   }
 }
