--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@langchain/langgraph": "^0.3.8",
     "@langchain/mcp-adapters": "^0.5.3",
     "@modelcontextprotocol/sdk": "^1.15.1",
+    "@solana/wallet-adapter-base": "^0.9.27",
+    "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.2",
     "dotenv": "^17.2.0",
     "node-fetch": "^3.3.2"
